samples/_failures_safe/1761268103_31d54d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab9ba88e.c:134:1: error: expected identifier or ‘(’ at end of input
  134 | int
      | ^~~
